--- a/Web/Views/Account/Login.cshtml
+++ b/Web/Views/Account/Login.cshtml
@@ -116,7 +116,7 @@
                   <div class="mt-2" id="selectedTags"></div>
                 </div>
                 <div class="mt-4">
-                  <button class="icon-link-btn">
+                  <button type="submit" class="icon-link-btn">
                     Регистрация
                   </button>
                   <div class="mt-2 text-center">
