--- a/Web/Views/Idea/Index.cshtml
+++ b/Web/Views/Idea/Index.cshtml
@@ -118,7 +118,7 @@
                                     </span>
                                     <div class="mt-2" id="selectedNewIdeaTags"></div>
                                 </div>
-                                <button type="submit" class="mt-3 icon-link-btn">
+                                <button type="submit" class="mt-3 bubbly-button icon-link-btn">
                                     Создать идею
                                 </button>
                                 <label id="newIdeaWindowError" class="pt-2 text-center text-danger t-sm">
@@ -597,7 +597,7 @@
                                         Опишите эту тему, другие смогут комментировать топик
                                     </label>
                                 </div>
-                                <button type="submit" class="mt-4 icon-link-btn">
+                                <button type="submit" class="mt-4 bubbly-button icon-link-btn">
                                     Создать
                                 </button>
                                 <label id="newTopicWindowError" class="pt-2 t-sm text-danger" for="floatingInput">
@@ -898,7 +898,7 @@
                                             Добавить начальные задачи
                                         </label>
                                     </div>
-                                    <button type="submit" class="mt-4 icon-link-btn">
+                                    <button type="submit" class="mt-4 bubbly-button icon-link-btn">
                                         Создать цель
                                     </button>
                                     <label id="newGoalWindowError" class="pt-2 t-sm text-danger form-check-label"
@@ -1098,7 +1098,7 @@
                             <div class="col-12 d-flex align-items-end">
                                 <div class="ms-auto pb-2 d-flex">
                                     <div class="position-relative me-5">
-                                        <button data-idea="@Model.Idea.Guid" class="asyncSetLike btn position-absolute btn-unfocus bg-transparent clr-mute mt-1">
+                                        <button data-idea="@Model.Idea.Guid" class="bubbly-button asyncSetLike btn position-absolute btn-unfocus bg-transparent clr-mute mt-1">
                                             <svg data-idea="@Model.Idea.Guid" xmlns="http://www.w3.org/2000/svg"
                                                  width="33"
                                                  height="33"
@@ -1257,7 +1257,7 @@ else
                                         }
                                         else
                                         {
-                                            <button data-idea="@Model.Idea.Guid" class="asyncSetLike btn position-absolute btn-unfocus bg-transparent clr-mute mt-1">
+                                            <button data-idea="@Model.Idea.Guid" class="bubbly-button asyncSetLike btn position-absolute btn-unfocus bg-transparent clr-mute mt-1">
                                                 <svg data-idea="@Model.Idea.Guid" xmlns="http://www.w3.org/2000/svg"
                                                      width="33"
                                                      height="33"
