--- a/Web/Views/Shared/NotFound.cshtml
+++ b/Web/Views/Shared/NotFound.cshtml
@@ -19,7 +19,7 @@
                     Запрашиваемый ресурс не был <br />
                     найден либо был перемещен
                 </p>
-                <a href="/home" class="clr-blue t-bold t-lg">На главную</a>
+                <a asp-controller="authorize" asp-action="index" class="clr-blue t-bold t-lg">На главную</a>
             </div>
         </div>
     </div>
