--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="~/css/idea-upd.css" />
     <link rel="stylesheet" href="~/css/find-upd.css" />
     <link rel="stylesheet" href="~/css/index.css" />
-
+    <link rel="stylesheet" href="~/css/updated.css" />
+    <link rel="stylesheet" href="~/css/present.css" />
 
     <!-- Bootstrap CSS
     <link
@@ -56,11 +57,11 @@
                 </label>
             </div>
             <div class="pt-2 d-flex justify-content-center flex-wrap">
-                <a asp-route-section="ideas" asp-controller="about" class="text-muted t-med t-sm pe-3">Об идеях</a>
-                <a asp-route-section="communication" asp-controller="about" class="text-muted t-med t-sm pe-3">Коммуникация</a>
-                <a asp-route-section="contacts" asp-controller="about" class="text-muted  t-med t-sm pe-3">Контакты</a>
-                <a asp-route-section="us" asp-controller="about" class="text-muted t-med t-sm pe-3">О нас</a>
-                <a asp-route-section="donate" asp-controller="about" class="text-muted t-med t-sm pe-3">Поддержать</a>
+                <a asp-route-section="ideas" asp-controller="about" class="text-muted t-med t-microsm pe-3">Об идеях</a>
+                <a asp-route-section="communication" asp-controller="about" class="text-muted t-med t-microsm pe-3">Коммуникация</a>
+                <a asp-route-section="contacts" asp-controller="about" class="text-muted  t-med t-microsm pe-3">Контакты</a>
+                <a asp-route-section="us" asp-controller="about" class="text-muted t-med t-microsm pe-3">О нас</a>
+                <a asp-route-section="donate" asp-controller="about" class="text-muted t-med t-microsm pe-3">Поддержать</a>
             </div>
         </div>
     </footer>
