--- a/Web/Views/About/Contacts.cshtml
+++ b/Web/Views/About/Contacts.cshtml
@@ -6,7 +6,7 @@
 <div class="container-fluid p-0 col-12">
     <div class="jumbotron jumbotron-fluid bg-black">
         <div class="container p-3 d-flex justify-content-center align-items-center flex-wrap">
-            <a class="clr-white" asp-controller="home">
+            <a class="clr-white" href="/">
                 <h1 style="font-size: 34px; font-weight: 900; letter-spacing: -0.4px;">
                     Roundile
                 </h1>
