--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -19,28 +19,37 @@
                 @if (!Model.IsAuthorized)
                 {
                     <!--Authorization-->
-                    <div id="loginWindow" class="win-hide rounded d-none login-window">
+                    <div id="loginWindow" class="win-hide window_rounded_shadow d-none login-window">
                         <form id="userSignupInfoForm" class="p-5">
                             <div class="mb-3 text-center">
                                 <span class="t-md t-med clr-mute">Основные данные 1/2</span>
                             </div>
                             <div class="form-floating mb-3">
-                                <input type="text"
-                                       class="begin-validate need-next-input form-control"
+                                <input autocomplete="off"
+                                       minlength="4"
+                                       maxlength="32"
+                                       type="text"
+                                       class="form-upd begin-validate need-next-input form-control"
                                        id="floatingInput"
                                        placeholder="Имя пользователя" />
                                 <label class="text-dark" for="floatingInput">Имя пользователя</label>
                             </div>
                             <div class="mb-3 form-floating">
-                                <input type="password"
-                                       class="begin-validate need-next-input form-control"
+                                <input autocomplete="off"
+                                       minlength="6"
+                                       maxlength="32"
+                                       type="password"
+                                       class="form-upd begin-validate need-next-input form-control"
                                        id="floatingPassword"
                                        placeholder="Пароль" />
                                 <label class="text-dark" for="floatingPassword">Пароль</label>
                             </div>
                             <div class="mb-3 form-floating">
-                                <input type="password"
-                                       class="begin-validate need-next-input form-control"
+                                <input autocomplete="off"
+                                       minlength="6"
+                                       maxlength="32"
+                                       type="password"
+                                       class="form-upd begin-validate need-next-input form-control"
                                        id="floatingPassword"
                                        placeholder="Подтвердите пароль" />
                                 <label class="text-dark" for="floatingPassword">Подтвердите пароль</label>
@@ -48,7 +57,7 @@
                             <div class="mt-4">
                                 <button id="asyncSelectTagsBtn"
                                         disabled
-                                        class="icon-link-btn icon-btn-disabled">
+                                        class="bubbly-button icon-link-btn icon-btn-disabled">
                                     Выбрать теги
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                          width="16"
@@ -72,7 +81,7 @@
                         </form>
                     </div>
                     <div id="selectTagWindow"
-                         class="win-hide z-m10 selectTagContainer position-absolute rounded login-window">
+                         class="win-hide z-m10 selectTagContainer position-absolute window_rounded_shadow login-window">
                         <form id="userSignupTagsForm" class="p-5">
                             <div class="mb-3 text-center">
                                 <span class="t-md t-med clr-mute">Интересующие теги 2/2</span>
@@ -93,7 +102,7 @@
                                 <div class="mt-2" id="selectedTags"></div>
                             </div>
                             <div class="mt-4">
-                                <button class="icon-link-btn">
+                                <button type="submit" class="bubbly-button icon-link-btn">
                                     Регистрация
                                 </button>
                                 <div class="mt-2 text-center">
@@ -106,27 +115,29 @@
                         </form>
                     </div>
                     <div id="signinWindow"
-                         class="position-absolute rounded d-none login-window">
+                         class="position-absolute window_rounded_shadow d-none login-window">
                         <form id="userSignInForm" class="p-5">
                             <div class="mb-3 text-center">
                                 <span class="t-md t-med clr-mute">Войти в существующий аккаунт</span>
                             </div>
                             <div class="form-floating mb-3">
-                                <input type="text"
-                                       class="form-control"
+                                <input autocomplete="off"
+                                       type="text"
+                                       class="form-upd form-control"
                                        id="floatingInput"
                                        placeholder="Имя пользователя" />
                                 <label class="text-dark" for="floatingInput">Имя пользователя</label>
                             </div>
                             <div class="mb-3 form-floating">
-                                <input type="password"
-                                       class="form-control"
+                                <input autocomplete="off"
+                                       type="password"
+                                       class="form-upd form-control"
                                        id="floatingPassword"
                                        placeholder="Пароль" />
                                 <label class="text-dark" for="floatingPassword">Пароль</label>
                             </div>
                             <div class="mt-4">
-                                <button class="icon-link-btn">
+                                <button class="bubbly-button icon-link-btn">
                                     Войти
                                 </button>
                                 <hr class="clr-mute" />
@@ -305,7 +316,7 @@
                                         </span>
                                         <div class="mt-2" id="selectedNewIdeaTags"></div>
                                     </div>
-                                    <button type="submit" class="mt-3 icon-link-btn">
+                                    <button type="submit" class="mt-3 bubbly-button icon-link-btn">
                                         Создать идею
                                     </button>
                                     <label id="newIdeaWindowError" class="pt-2 text-center text-danger t-sm">
@@ -539,7 +550,7 @@ else
           top: 0 !important;
           background: rgb(0 90 255 / 0%);
         ">
-            <a href="/account/login">
+            <a asp-action="login" asp-controller="authorize">
                 <div class="d-flex align-items-center">
                     <img class="image-link-animation present_hide_elems" height="33" src="~/media/site/logo.png" />
                     <div class="ps-2">
@@ -684,7 +695,7 @@ else
                                                                          class="reaction-wrap position-relative">
                                                                         <button data-idea="@idea.Guid"
                                                                                 data-react="@react.Guid"
-                                                                                class="async-reaction-btn position-absolute me-2 btn_reaction">
+                                                                                class="bubbly-button async-reaction-btn position-absolute me-2 btn_reaction">
                                                                             @react.Value
                                                                             <span>@react.Count</span>
                                                                         </button>
@@ -702,7 +713,7 @@ else
                                                                     </div>
                                                                     }
 
-                                                                    leftPadding = leftPadding + 76;
+                                                                    leftPadding = leftPadding + 59;
                                                                 }
                                                             }
                                                         }
@@ -726,7 +737,7 @@ else
                                                         }
                                                         else
                                                         {
-                                                            <button data-idea="@idea.Guid" class="asyncSetLike btn position-absolute btn-unfocus bg-transparent clr-mute mt-1">
+                                                            <button data-idea="@idea.Guid" class="bubbly-button asyncSetLike btn position-absolute btn-unfocus bg-transparent clr-mute mt-1">
                                                                 <svg data-idea="@idea.Guid" xmlns="http://www.w3.org/2000/svg"
                                                                      width="33"
                                                                      height="33"
