--- a/Web/Views/User/EditAccount.cshtml
+++ b/Web/Views/User/EditAccount.cshtml
@@ -190,7 +190,7 @@
                                     </span>
                                     <div class="mt-2" id="selectedNewIdeaTags"></div>
                                 </div>
-                                <button type="submit" class="mt-3 icon-link-btn">
+                                <button type="submit" class="mt-3 bubbly-button icon-link-btn">
                                     Создать идею
                                 </button>
                                 <label id="newIdeaWindowError" class="pt-2 text-center text-danger t-sm">
@@ -561,7 +561,7 @@
                                     <label class="t-md t-med clr-white">@Model.UserDetail.Name</label>
                                 </div>
                                 <div class="btn-back-hover aside_section_adaptive">
-                                    <form asp-action="signout" asp-controller="account">
+                                    <form asp-action="signout" asp-controller="authorize">
                                         <button class="p-3 col-12 btn-unfocus hover-white btn clr-mute t-bold t-sm bg-transparent">
                                             Выйти из акканута
                                         </button>
