--- a/Web/wwwroot/css/style.css
+++ b/Web/wwwroot/css/style.css
@@ -195,10 +195,9 @@ a {
 }
 
     .react-wrap-active button {
-        background: #ffffff52 !important;
-        animation: onReaction 0.3s ease;
-        box-shadow: 0px -1px 5px 7px #ffffff52;
+        border-bottom: 1px solid #079bff;
     }
+
 
 .btn_like_animate {
     animation: onReaction 0.5s ease;
@@ -662,4 +661,9 @@ a {
 
 .showParticipationWindowBtn {
     cursor:pointer!important;
+}
+
+
+.t-microsm {
+    font-size:11px!important;
 }
