clean home controller

--- a/Web/Views/About/Ideas.cshtml
+++ b/Web/Views/About/Ideas.cshtml
@@ -7,7 +7,7 @@
 <div class="container-fluid p-0 col-12">
     <div class="jumbotron jumbotron-fluid bg-black">
         <div class="container p-3 d-flex justify-content-center align-items-center flex-wrap">
-            <a class="clr-white" href="/">
+            <a class="clr-white" asp-action="index" asp-controller="authorize">
                 <h1 style="font-size: 34px; font-weight: 900; letter-spacing: -0.4px;">
                     Roundile
                 </h1>
