--- a/Web/Views/Authorize/Index.cshtml
+++ b/Web/Views/Authorize/Index.cshtml
@@ -154,7 +154,7 @@
           top: 0 !important;
           background: rgb(0 90 255 / 0%);
         ">
-        <a asp-action="login" asp-controller="authorize">
+        <a asp-action="index" asp-controller="authorize">
             <div class="d-flex align-items-center">
                 <img class="image-link-animation present_hide_elems" height="33" src="~/media/site/logo.png" />
                 <div class="ps-2">
