--- a/Web/Views/Idea/Index.cshtml
+++ b/Web/Views/Idea/Index.cshtml
@@ -1040,7 +1040,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-action="im" asp-controller="user">
-                        <img src="~/media/userAvatars/@avatar" height="33" class="b-all rounded-circle" />
+                        <img src="~/media/userAvatars/@avatar" height="33" width="33" class="b-all rounded-circle" />
                     </a>
                 </li>
             </ul>
