--- a/Web/wwwroot/css/style.css
+++ b/Web/wwwroot/css/style.css
@@ -39,7 +39,7 @@ a {
     height: 204.51px;
     border-radius: 6px;
     background-repeat: no-repeat;
-    background-size: auto 100% !important;
+    background-size: 100% auto !important;
     background-position: center !important;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
